added experimental acl/ftp support, removed some useless files
git-svn-id: https://tinyproxy-ex.svn.sourceforge.net/svnroot/tinyproxy-ex@3 83a598aa-e702-4329-b5a2-d7f1006a0cbb

--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -11,6 +11,7 @@ PACKAGING = $(REDHAT)
 EXTRA_DIST = TODO $(PACKAGING)
 SUBDIRS = src doc
 
+ACLOCAL_AMFLAGS = -I m4
 install-data-local: tinyproxy-configure-file tinyproxy-html-files
 
 # Install the configuration file if it doesn't already exist
