--- a/trunk/doc/tinyproxy.conf
+++ b/trunk/doc/tinyproxy.conf
@@ -40,31 +40,31 @@ Timeout 600
 #   /usr/share/tinyproxy
 #   /etc/tinyproxy
 #
-# ErrorFile 404 "/usr/share/tinyproxy/404.html"
-# ErrorFile 400 "/usr/share/tinyproxy/400.html"
-# ErrorFile 503 "/usr/share/tinyproxy/503.html"
-# ErrorFile 403 "/usr/share/tinyproxy/403.html"
-# ErrorFile 408 "/usr/share/tinyproxy/408.html"
+# ErrorFile 404 "/usr/share/tinyproxy-ex/404.html"
+# ErrorFile 400 "/usr/share/tinyproxy-ex/400.html"
+# ErrorFile 503 "/usr/share/tinyproxy-ex/503.html"
+# ErrorFile 403 "/usr/share/tinyproxy-ex/403.html"
+# ErrorFile 408 "/usr/share/tinyproxy-ex/408.html"
 
 # 
 # DefaultErrorFile: The HTML file that gets sent if there is no
 # HTML file defined with an ErrorFile keyword for the HTTP error
 # that has occured.
 #
-DefaultErrorFile "/usr/share/tinyproxy/default.html"
+DefaultErrorFile "/usr/share/tinyproxy-ex/default.html"
 
 #
 # StatFile: The HTML file that gets sent when a request is made
 # for the stathost.  If this file doesn't exist a basic page is
 # hardcoded in tinyproxy.
 #
-StatFile "/usr/share/tinyproxy/stats.html"
+StatFile "/usr/share/tinyproxy-ex/stats.html"
 
 #
 # Where to log the information. Either LogFile or Syslog should be set,
 # but not both.
 #
-Logfile "/var/log/tinyproxy.log"
+Logfile "/var/log/tinyproxy-ex.log"
 # Syslog On
 
 #
@@ -85,7 +85,7 @@ LogLevel Info
 # PidFile: Write the PID of the main tinyproxy thread to this file so it
 # can be used for signalling purposes.
 #
-PidFile "/var/run/tinyproxy.pid"
+PidFile "/var/run/tinyproxy-ex.pid"
 
 #
 # Include the X-Tinyproxy header, which has the client's IP address when
@@ -175,7 +175,7 @@ Allow 192.168.1.0/25
 # supplied will be used as the host name in the Via header; otherwise, the
 # server's host name will be used.
 #
-ViaProxyName "tinyproxy"
+ViaProxyName "tinyproxy-ex"
 
 #
 # The location of the filter file.
