--- a/trunk/doc/tinyproxy.conf
+++ b/trunk/doc/tinyproxy.conf
@@ -43,7 +43,7 @@ Timeout 600
 # ErrorFile 404 "/usr/share/tinyproxy-ex/404.html"
 # ErrorFile 400 "/usr/share/tinyproxy-ex/400.html"
 # ErrorFile 503 "/usr/share/tinyproxy-ex/503.html"
-# ErrorFile 403 "/usr/share/tinyproxy-ex/403.html"
+ErrorFile 403 "/usr/share/tinyproxy-ex/403.html"
 # ErrorFile 408 "/usr/share/tinyproxy-ex/408.html"
 
 # 
@@ -166,8 +166,10 @@ MaxRequestsPerChild 0
 # Also the order of the controls are important. The incoming connections
 # are tested against the controls based on order.
 #
-Allow 127.0.0.1
-Allow 192.168.1.0/25
+acl all 0.0.0.0/0
+acl localnet 127.0.0.0/8
+acl daughter 192.168.0.1
+acl homenet 192.168.0.0/24
 
 #
 # The "Via" header is required by the HTTP RFC, but using the real host name
@@ -180,7 +182,10 @@ ViaProxyName "tinyproxy-ex"
 #
 # The location of the filter file.
 #
-#Filter "/etc/tinyproxy/filter"
+# Note: This is different to the original tinyproxy filtering. 
+#Filter localnet "/etc/tinyproxy-ex/filter.local"
+#Filter homenet "/etc/tinyproxy-ex/filter.local"
+#
 
 #
 # Filter based on URLs rather than domains.
@@ -194,8 +199,8 @@ ViaProxyName "tinyproxy-ex"
 
 #
 # Use case sensitive regular expressions.
-#                                                                         
-#FilterCaseSensitive On     
+#
+#FilterCaseSensitive On
 
 #
 # Change the default policy of the filtering system.  If this directive is
