added new keyworld 'ReverseLookup'
git-svn-id: https://tinyproxy-ex.svn.sourceforge.net/svnroot/tinyproxy-ex@19 83a598aa-e702-4329-b5a2-d7f1006a0cbb

--- a/trunk/doc/tinyproxy.conf
+++ b/trunk/doc/tinyproxy.conf
@@ -180,6 +180,12 @@ acl homenet 192.168.0.0/24
 ViaProxyName "tinyproxy-ex"
 
 #
+# Try to resolve clients hostname (which in most cases wont work, believe
+# me...). It is required only if you plan to use name based ACLs.
+#
+ReverseLookup no
+
+#
 # The location of the filter file.
 #
 # Note: This is different to the original tinyproxy filtering. 
