more stats, log response statuscode, removed some warnings
git-svn-id: https://tinyproxy-ex.svn.sourceforge.net/svnroot/tinyproxy-ex@29 83a598aa-e702-4329-b5a2-d7f1006a0cbb

--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -178,7 +178,7 @@ dnl CFLAGS variable to it; otherwise, start with an empty CFLAGS
 if test x"$ac_env_CFLAGS_set" = x"set" ; then
     CFLAGS=$ac_env_CFLAGS_value
 else
-    CFLAGS=""
+    CFLAGS="-Wall -Wsign-compare"
 fi
 
 dnl Make sure YACC is actually bison
