fix acl examples on tinyproxy.conf
git-svn-id: https://tinyproxy-ex.svn.sourceforge.net/svnroot/tinyproxy-ex@37 83a598aa-e702-4329-b5a2-d7f1006a0cbb

--- a/trunk/doc/tinyproxy.conf
+++ b/trunk/doc/tinyproxy.conf
@@ -166,10 +166,10 @@ MaxRequestsPerChild 0
 # Also the order of the controls are important. The incoming connections
 # are tested against the controls based on order.
 #
-acl all 0.0.0.0/0
-acl localnet 127.0.0.0/8
-acl daughter 192.168.0.1
-acl homenet 192.168.0.0/24
+acl all src 0.0.0.0/0
+acl localnet src 127.0.0.0/8
+acl daughter src 192.168.0.1
+acl homenet src 192.168.0.0/24
 
 #
 # The "Via" header is required by the HTTP RFC, but using the real host name
