support multiple socket addresses to listen on
git-svn-id: https://tinyproxy-ex.svn.sourceforge.net/svnroot/tinyproxy-ex@55 83a598aa-e702-4329-b5a2-d7f1006a0cbb

--- a/trunk/doc/tinyproxy.conf
+++ b/trunk/doc/tinyproxy.conf
@@ -9,16 +9,15 @@
 User nobody
 Group nogroup
 
+# The socket addresses where tinyproxy-ex will listen for HTTP client
+# requests. You may specify multiple socket addresses on multiple lines.
 #
-# Port to listen on.
-#
-Port 8888
-
-#
-# If you have multiple interfaces this allows you to bind to only one. If
-# this is commented out, tinyproxy will bind to all interfaces present.
-#
-#Listen 192.168.0.1
+# Note:
+#   This replaces the orƣginal Listen/Port directives known from
+#   tinyproxy-1.6.3
+# Example:
+#   Listen 0.0.0.0:3128 - listen on all interfaces port 3128
+Listen 127.0.0.1:3128
 
 #
 # The Bind directive allows you to bind the outgoing connections to a
@@ -85,7 +84,11 @@ LogLevel Info
 # PidFile: Write the PID of the main tinyproxy thread to this file so it
 # can be used for signalling purposes.
 #
-PidFile "/var/run/tinyproxy-ex.pid"
+# Note:
+#   On most systems the "/var/run" directory is only writable by 'root'.
+#   In order to be able to shutdown tinyproxy-ex cleanly, a subdirectory
+#   owned by the tinyproxy-ex user is recommended.
+PidFile "/var/run/tinyproxy-ex/tinyproxy-ex.pid"
 
 #
 # Include the X-Tinyproxy header, which has the client's IP address when
