added 'strip' target for make
git-svn-id: https://tinyproxy-ex.svn.sourceforge.net/svnroot/tinyproxy-ex@70 83a598aa-e702-4329-b5a2-d7f1006a0cbb

--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -61,3 +61,5 @@ uninstall-tinyproxy-html-files:
 uninstall-tinyproxy-configure-file:
 	rm -f $(DESTDIR)@TINYPROXY_CONFIG_DIR@/@TINYPROXY_CONFIG_FILE@-dist
 
+strip:
+	make -C src strip
