CMakeLists.txt: fix typo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ ADD_FLEX_BISON_DEPENDENCY(SCANNER GRAMMAR)
 IF(FILTER_SUPPORT)
   SET(FILTER_SRC src/filter.c)
 ENDIF()
-IF(PROCTILTLE_SUPPORT)
+IF(PROCTITLE_SUPPORT)
   SET(PROCTITLE_SRC src/proctitle.c)
 ENDIF()
 IF(FTP_SUPPORT)
