fix "install" target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,7 @@ CONFIGURE_FILE(doc/tinyproxy-ex.conf.in ${CMAKE_CURRENT_BINARY_DIR}/${CONFIGFILE
 FILE(GLOB icons "${CMAKE_CURRENT_SOURCE_DIR}/doc/icons/*.png")
 FILE(GLOB html  "${CMAKE_CURRENT_SOURCE_DIR}/doc/*.html")
 FILE(GLOB css   "${CMAKE_CURRENT_SOURCE_DIR}/doc/*.css")
-INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/src/tinyproxy DESTINATION sbin)
+INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/tinyproxy DESTINATION sbin)
 INSTALL(FILES ${icons} ${html} ${css} DESTINATION ${DATAROOTDIR})
 INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFIGFILE} DESTINATION ${CONFIGDIR})
 
